# MidiFileTransform

./: .gitignore  README.md  pyinstaller.py  pyproject.toml
MidiFileTransform/: main.py
