[project]
name = "MidiFileTransform"
version = "0.1.0"
description = ""
authors = [
    {name = "Décio Dias",email = "ddiasweb@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "matplotlib (>=3.10.5,<4.0.0)",
    "mido[ports-rtmidi] (>=1.3.3,<2.0.0)",
    "pyqt6 (>=6.9.1,<7.0.0)"
]
[tool.poetry.scripts]
start = "MidiFileTransform.main:run"
build = "pyinstaller:install"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.15.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
